<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardArtista"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:backgroundTint="@color/backgroundBlue"
        android:elevation="200dp"
        app:cardCornerRadius="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="90dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="">

        <TextView
            android:id="@+id/txtv_cnombreArt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/nombre_art"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtv_cnombreReal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/nombre_real"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtv_cApep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/apellido_paterno"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtv_cApem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/apellido_materno"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtv_cTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/num_telefon"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtv_cFechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/fecha_de_nacimiento"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtv_cCiudadS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/ciudad_del_show"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtv_cHoraInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/hora_inicio_del_show"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtv_cHoraFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/hora_final_del_show"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_callArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/llamar"
            />

    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>