<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarUsuario"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/gradient_background"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/frequency_icon_png"
            android:layout_gravity="center"
            android:contentDescription="@string/contextIcon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="45sp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:fontFamily="@font/julius_sans_one" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="510dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/login_background"
        android:paddingVertical="10dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_account_circle_24"
            android:layout_marginBottom="10dp"
            android:alpha="0.7"
            android:contentDescription="@string/contextIcon"/>
        <EditText
            android:id="@+id/nombre"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edges"
            android:textSize="15sp"
            android:hint="@string/name_txt"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/white"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/apellidoM"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edges"
            android:textSize="15sp"
            android:hint="@string/lastName1"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/white"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/apellidoP"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edges"
            android:textSize="15sp"
            android:hint="@string/lastName2"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/white"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edges"
            android:textSize="15sp"
            android:hint="@string/user_txt"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/white"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edges"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:hint="@string/password_txt"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/white"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="password" />
        <TextView
            android:id="@+id/iniciarSesion"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/existAccountText"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textAlignment="textEnd"/>
        <Button
            android:id="@+id/registrar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/register_txt"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/login_button"
            />
    </LinearLayout>

</LinearLayout>