<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modificar"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_edges_main"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/roboto_condense_regular"
            android:gravity="center"
            android:text="@string/artista_show"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edt_nombre_art"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edges"
            android:hint="@string/nombre_art"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_nombre_real"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edges"
            android:hint="@string/nombre_real"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_apep"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edges"
            android:hint="@string/apellido_paterno"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_apem"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edges"
            android:hint="@string/apellido_materno"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_tel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edges"
            android:hint="@string/num_telefon"
            android:inputType="phone"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_mshowdate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edges"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/fecha_de_nacimiento"
            android:inputType="date"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_spinner"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/edt_horaInicio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edges"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/hora_inicio_del_show"
            android:inputType="time"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_horaFinal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edges"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/hora_final_del_show"
            android:inputType="time"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">
            <ImageButton
                android:id="@+id/anterior"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/baseline_keyboard_arrow_down_24"
                android:layout_marginEnd="10dp"
                android:rotation="90"/>
            <Button
                android:id="@+id/actualizar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Actualizar"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/login_button"
                android:layout_marginEnd="10dp"/>
            <ImageButton
                android:id="@+id/siguiente"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/baseline_keyboard_arrow_down_24"
                android:rotation="-90"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>